--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@twilio-paste/core": "10.4.0",
     "@twilio-paste/icons": "5.3.1",
-    "@twilio/conversations": "2.0.1",
+    "@twilio/conversations": "~2.2.0-rc.11",
     "@types/file-saver": "2.0.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
