--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.2.0",
   "private": true,
   "dependencies": {
-    "@twilio-paste/core": "10.4.0",
-    "@twilio-paste/icons": "5.3.1",
+    "@twilio-paste/core": "14.2.0",
+    "@twilio-paste/icons": "8.1.0",
     "@twilio/conversations": "~2.2.0-rc.11",
     "@types/file-saver": "2.0.3",
+    "@types/lodash": "4.14.182",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "7.1.16",
