--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "10.0.0",
     "file-saver": "2.0.5",
     "firebase": "9.6.7",
+    "javascript-time-ago": "^2.5.7",
     "lodash": "4.17.21",
     "prop-types": "15.7.2",
     "react": "17.0.2",
