--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-infinite-scroll-component": "6.1.0",
     "react-redux": "7.2.4",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "redux": "4.1.0",
     "redux-thunk": "2.3.0",
     "typescript": "^4.1.2"
@@ -55,6 +55,7 @@
     "@types/redux-thunk": "2.1.0",
     "@typescript-eslint/eslint-plugin": "5.4.0",
     "@typescript-eslint/parser": "5.4.0",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
