--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-scripts": "5.0.1",
     "redux": "4.1.0",
     "redux-thunk": "2.3.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "word-wrap": "^1.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
