--- a/AutomationTests/package.json
+++ b/AutomationTests/package.json
@@ -11,10 +11,12 @@
         "@wdio/cucumber-framework": "^7.26.0",
         "@wdio/local-runner": "^7.26.0",
         "@wdio/spec-reporter": "^7.26.0",
-        "chromedriver": "^107.0.3",
+        "chromedriver": "^110.0.0",
         "wdio-chromedriver-service": "^8.0.0"
     },
     "scripts": {
-        "wdio": "wdio run wdio.conf.js"
+        "wdio": "wdio run wdio.conf.js",
+        "decrypt": ". ./scripts/decrypt.sh",
+        "encrypt": ". ./scripts/encrypt.sh"
     }
 }
