--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ replit.nix
 .env.test.local
 .env.production.local
 react-app-env.d.ts
+public/firebase-config.js
+public/firebase-messaging-sw.js
 
 npm-debug.log*
 yarn-debug.log*
