--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "file-saver": "2.0.5",
     "firebase": "9.15.0",
     "javascript-time-ago": "^2.5.7",
+    "libphonenumber-js": "1.10.24",
     "lodash": "4.17.21",
     "prop-types": "15.7.2",
     "react": "17.0.2",
