RTDSDK-4036 - Use ChatComposer from Paste

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.2.0",
   "private": true,
   "dependencies": {
+    "@twilio-paste/chat-composer": "^3.0.0",
     "@twilio-paste/core": "19.0.0",
     "@twilio-paste/icons": "11.0.0",
     "@twilio/conversations": "2.4.0-rc.0",
