--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.2.0",
   "private": true,
   "dependencies": {
+    "@twilio-paste/avatar": "^8.1.0",
     "@twilio-paste/chat-composer": "^3.0.0",
     "@twilio-paste/core": "19.0.0",
     "@twilio-paste/icons": "11.0.0",
