feat: Add lint yarn commands

--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "generateCircleConfig": "npx ts-node --project tsconfig.tools.json ./tools/circle-config-generator/generate-circle-config.ts",
     "start": "react-scripts start",
     "test": "react-scripts test",
-    "test:wdio": "cd AutomationTests; npm run wdio"
+    "test:wdio": "cd AutomationTests; npm run wdio",
+    "lint": "npx eslint src --ext .ts --ext .tsx",
+    "lint:fix": "npx eslint src --ext .ts --ext .tsx --fix"
   },
   "eslintConfig": {
     "extends": [
