--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "test": "react-scripts test",
     "test:wdio": "cd AutomationTests; npm run wdio",
     "lint": "npx eslint src --ext .ts --ext .tsx",
-    "lint:fix": "npx eslint src --ext .ts --ext .tsx --fix"
+    "lint:fix": "npx eslint src --ext .ts --ext .tsx --fix",
+    "prepare": "npx husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -57,6 +58,9 @@
   },
   "devDependencies": {
     "@circleci/circleci-config-sdk": "^0.12.0",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
+    "conventional-changelog-conventionalcommits": "^4.6.0",
     "@types/file-saver": "2.0.3",
     "@types/lodash": "4.14.182",
     "@types/react": "^17.0.0",
@@ -69,6 +73,7 @@
     "eslint": "^7.11.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
+    "husky": "^7.0.1",
     "prettier": "2.4.1"
   }
 }
